Added new timeline api endpoint and api_driver functon.

--- a/settings.ini
+++ b/settings.ini
@@ -3,8 +3,8 @@
 application_title = BlueSky Research API Test
 output_directory = C:\\data\\
 database_name = bluesky_repo.db
-account = shychko.bsky.social
-api_token = l74a-gnfu-p7zc-hrqd
+account = alextboyko.bsky.social
+api_token = a3um-snyn-4ggn-mgoe
 default_limit = 10
 followers_json_file = ..//followers.json
 following_json_file = ..//following.json
